--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   uuid: ^4.2.1
   url_launcher: ^6.2.2
   share_plus: ^7.2.1
+  pdf: ^3.10.8
+  printing: ^5.12.0
   intl: ^0.20.2
   flutter_gravatar: ^2.0.0
   
